--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.6",
+    "axios": "^1.9.0",
     "material-design-icons-iconfont": "^6.7.0",
     "tailwindcss": "^4.1.6",
     "vue": "^3.5.13",
