--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.23",
+    "@heroicons/vue": "^2.2.0",
     "@tailwindcss/vite": "^4.1.6",
     "axios": "^1.9.0",
     "material-design-icons-iconfont": "^6.7.0",
     "tailwindcss": "^4.1.6",
     "vue": "^3.5.13",
+    "vue-router": "^4.5.1",
     "vuetify": "^3.8.4"
   },
   "devDependencies": {
