更新个人主页

--- a/package.json
+++ b/package.json
@@ -12,14 +12,25 @@
     "@headlessui/vue": "^1.7.23",
     "@heroicons/vue": "^2.2.0",
     "@tailwindcss/vite": "^4.1.6",
+    "@vee-validate/zod": "^4.15.0",
+    "@vueuse/core": "^13.3.0",
     "axios": "^1.9.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.511.0",
     "material-design-icons-iconfont": "^6.7.0",
+    "reka-ui": "^2.3.0",
+    "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.6",
+    "tw-animate-css": "^1.3.2",
+    "vee-validate": "^4.15.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1",
-    "vuetify": "^3.8.4"
+    "vuetify": "^3.8.4",
+    "zod": "^3.25.36"
   },
   "devDependencies": {
+    "@types/node": "^22.15.24",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/tsconfig": "^0.7.0",
     "typescript": "~5.8.3",
