--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.511.0",
     "material-design-icons-iconfont": "^6.7.0",
+    "nprogress": "^0.2.0",
     "reka-ui": "^2.3.0",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.6",
