--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dompurify": "^3.2.6",
+    "highlight.js": "^11.11.1",
     "lucide-vue-next": "^0.511.0",
+    "marked": "^15.0.12",
     "material-design-icons-iconfont": "^6.7.0",
     "nprogress": "^0.2.0",
     "reka-ui": "^2.3.0",
