--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "clsx": "^2.1.1",
     "dompurify": "^3.2.6",
     "highlight.js": "^11.11.1",
+    "lodash-es": "^4.17.21",
     "lucide-vue-next": "^0.511.0",
+    "markdown-it": "^14.1.0",
+    "markdown-it-katex": "^2.0.3",
     "marked": "^15.0.12",
     "material-design-icons-iconfont": "^6.7.0",
     "nprogress": "^0.2.0",
