--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "markdown-it-katex": "^2.0.3",
     "marked": "^15.0.12",
     "material-design-icons-iconfont": "^6.7.0",
+    "mathjax": "^3.2.2",
     "nprogress": "^0.2.0",
     "pinia": "^3.0.2",
     "reka-ui": "^2.3.0",
