--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "dompurify": "^3.2.6",
     "highlight.js": "^11.11.1",
     "lodash-es": "^4.17.21",
